--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ide-electron",
+  "name": "Optima IDE",
   "private": true,
   "version": "1.0.0",
-  "description": "OpenSumi IDE Electron 示例项目",
+  "description": "Optima IDE",
   "main": "./app/main/index.js",
   "scripts": {
     "start": "electron --inspect=9229 .",
