--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,16 +43,18 @@ jobs:
     - name: Package for x64
       run: yarn pack:x64
 
-    - name: Ensure bin directory exists
+    - name: Ensure bin directory is clean
       run: |
-        if (!(Test-Path -Path "./bin")) {
+        if (Test-Path -Path "./bin") {
+          Remove-Item -Path "./bin/*" -Force
+        } else {
           New-Item -ItemType Directory -Force -Path "./bin"
         }
 
     - name: Move package to bin directory
       run: |
         $outputPath = Get-ChildItem -Path . -Recurse -Filter "*.exe" | Select-Object -ExpandProperty FullName
-        Move-Item -Path $outputPath -Destination "./bin"
+        Move-Item -Path $outputPath -Destination "./bin" -Force
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
