--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,11 @@ jobs:
       with:
         node-version: '16'
 
+    - name: Install Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
     - name: Set npm registry
       run: |
         yarn config set registry https://registry.yarnpkg.com
