--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch: # This enables manual triggering
 
 jobs:
   build:
@@ -24,11 +25,9 @@ jobs:
     - name: Set npm registry
       run: |
         yarn config set registry https://registry.yarnpkg.com
-
     - name: Increase Yarn network timeout
       run: |
         yarn config set network-timeout 600000
-
     - name: Install dependencies
       run: yarn install
 
@@ -39,7 +38,6 @@ jobs:
         # Skip other checks by setting related environment variables if needed
         $env:SKIP_PREFLIGHT_CHECK = "true"
         yarn build-prod
-
     - name: Package for x64
       run: yarn pack:x64
 
@@ -48,12 +46,10 @@ jobs:
         if (!(Test-Path -Path "./bin")) {
           New-Item -ItemType Directory -Force -Path "./bin"
         }
-
     - name: Move package to bin directory
       run: |
         $outputPath = Get-ChildItem -Path . -Recurse -Filter "*.exe" | Select-Object -ExpandProperty FullName
         Move-Item -Path $outputPath -Destination "./bin"
-
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
