--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,19 +22,21 @@ jobs:
       with:
         node-version: '16'
 
-    - name: Install Windows Build Tools
-      run: |
-        npm install -g windows-build-tools
-        yarn config set msvs_version 2022
-
-    - name: Set npm registry
+    - name: Set npm registry & timeout
       run: |
         yarn config set registry https://registry.yarnpkg.com
-        
-    - name: Increase Yarn network timeout
-      run: |
         yarn config set network-timeout 600000
-        
+
+    - name: Install `prebuild-install` (dev)
+      run: yarn add prebuild-install --dev
+
+    - name: Try to fetch prebuilt native modules
+      run: |
+        # attempt to download prebuilt binaries for all native deps
+        npx prebuild-install || echo "No matching prebuilt binaries"
+        # if any native modules are still unbuilt, rebuild via your script
+        yarn rebuild-native
+
     - name: Install dependencies
       run: yarn install
 
@@ -43,7 +45,7 @@ jobs:
         $env:TSC_COMPILE_ON_ERROR = "true"
         $env:SKIP_PREFLIGHT_CHECK = "true"
         yarn build-prod
-        
+
     - name: Package for x64
       run: yarn pack:x64
 
@@ -52,12 +54,12 @@ jobs:
         if (!(Test-Path -Path "./bin")) {
           New-Item -ItemType Directory -Force -Path "./bin"
         }
-        
+
     - name: Move package to bin directory
       run: |
         $outputPath = Get-ChildItem -Path . -Recurse -Filter "*.exe" | Select-Object -ExpandProperty FullName
         Move-Item -Path $outputPath -Destination "./bin"
-        
+
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
