--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "watch": "run-p \"watch:*\"",
     "build": "rimraf -rf ./app && rimraf -rf ./out && run-p build:browser build:node build:extension build:main build:webview",
     "build-prod": "rimraf -rf ./app && rimraf -rf ./out && run-p build-prod:*",
-    "pack:x64": "yarn build && cross-env TARGET_ARCHES=x64 node build/pack.js",
-    "pack:arm64": "yarn build && cross-env TARGET_ARCHES=arm64 node build/pack.js",
-    "pack:all": "yarn pack:arm64 && yarn pack:x64",
-    "pack": "yarn build-prod && node build/pack.js",
+    "pack:x64": "yarn build-prod",
+    "pack:arm64": "yarn build-prod",
+    "pack:all": "yarn build-prod",
+    "pack": "yarn build-prod",
+    "dist": "electron-builder",
     "rebuild-native": "node ./scripts/rebuild-native.js --target=electron",
     "download-extension": "cross-env DEBUG=InstallExtension node scripts/download-extensions.js",
     "prepare": "husky install"
