Update build step to build and package for x64 in a single command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
 
       # 6. Package for x64
       - name: Package for x64
-        run: yarn dist --dir=dist
+        run: yarn build-prod && yarn dist
 
       # 7. Prepare artifacts
       - name: Prepare release assets
