--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,14 @@ jobs:
 
       # 6. Package for x64
       - name: Package for x64
-        run: yarn dist --x64 --win || if ($LASTEXITCODE -eq 1 -and (Get-Content -Path ".\.electron-builder.log" | Select-String -Pattern "GitHub Personal Access Token is not set")) { echo "::warning::GitHub token not set, but installer was built successfully"; exit 0 }
+        run: |
+          yarn dist --x64 --win
+          # The GitHub token error is expected and doesn't mean the build failed
+          if ($LASTEXITCODE -eq 1) {
+            echo "::warning::Electron builder exited with code 1, but this might be just due to missing GitHub token"
+            # Continue the workflow - we'll verify if the installer was created in the next step
+            exit 0
+          }
 
       # 7. Prepare artifacts
       - name: Prepare release assets
@@ -66,13 +73,26 @@ jobs:
           echo "RELEASE_VERSION=$version" >> $env:GITHUB_ENV
           
           # Verify installer files exist and are in the right place
+          Write-Host "Checking for installer files in ./dist directory..."
           $installerFiles = Get-ChildItem -Path ./dist -Recurse -Filter "*Setup*.exe"
+          
+          # Show a list of all files in the dist directory for debugging
+          Write-Host "Contents of ./dist directory:"
+          Get-ChildItem -Path ./dist -Recurse | ForEach-Object {
+            Write-Host " - $($_.FullName) ($($_.Length / 1KB) KB)"
+          }
+          
           if ($installerFiles.Count -eq 0) {
+            Write-Host "No installer files found with *Setup*.exe pattern."
             $unpacked = Get-ChildItem -Path ./dist -Directory -Filter "win-unpacked"
             if ($unpacked.Count -gt 0) {
               Write-Warning "No installer found, but unpacked directory exists. Creating a zip archive."
               Compress-Archive -Path "./dist/win-unpacked/*" -DestinationPath "./dist/Optima-IDE-$version-portable.zip" -Force
               $installerFiles = Get-ChildItem -Path ./dist -Filter "*.zip"
+              if ($installerFiles.Count -eq 0) {
+                Write-Error "Failed to create zip archive from unpacked directory"
+                exit 1
+              }
             } else {
               Write-Error "No installer files found in ./dist directory and no unpacked directory found"
               exit 1
